Ajuste do editar, validação do forms e comentarios

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <input type="url" name="youtube" id="youtube">
                 </div>
                 <div class="botoes">
-                    <button onclick="Submit(this.form)" type="button submit">Salvar</button>
+                    <button onclick="Submit(this.form)" type="submit button">Salvar</button>
                     <button type="reset">Limpar</button>
                 </div>
             </form>
@@ -86,7 +86,7 @@
                         <i class="fa-solid fa-magnifying-glass"></i>
                         PESQUISAR
                     </button>
-                    <button class="botaoDel" onclick="carregarBase(false)">
+                    <button class="botaoDel" onclick="limparPesquisa()">
                         <i class="fa-solid fa-circle-xmark"></i>
                     </button>
                 </div>
